--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="CSS/base.css">
     <link rel="stylesheet" href="CSS/mobile.css">
     <link rel="stylesheet" href="CSS/desktop.css">
+    <link rel="stylesheet" href="FONT/mobile-text.css">
 </head>
 <body>
     <header id="HEADER" class="header">
         <div class="header__container-title">
-            <h1 class="header__title">KONNICHIWA</h1>
+            <h1 class="header__title">EDAN'S DIARY</h1>
         </div>
     </header>
+    <main id="MAIN" class="main">
+        <div class="main__container-intro">
+            <p>En este sitio web he de subir la vida de "Edan Rose"</p>
+        </div>
+    </main>
     <nav id="NAV" class="nav">
         <ul class="nav__container-menu">
             <li><a href="PAGE/MAYRA/love.html" class="nav__link-s">MY HEART</a></li>
@@ -21,13 +27,17 @@
     </nav>
     <article id="ARTICLE-STUDIES" class="article-studies">
         <div class="article-studies__container-title">
-            <h2 class="article-studies__title">MIS ESTUDIOS</h2>
+            <h2 class="article-studies__title">BIBLIOTECA</h2>
         </div>
         <ul class="article-studies__container-content">
+            <h3>DEV. WEB</h3>
             <li><a href="PAGE/STUDY/HTML/course.html">HTML</a></li>
             <li><a href="PAGE/STUDY/CSS/course.html">CSS</a></li>
             <li><a href="PAGE/STUDY/JAVASCRIPT/course.html">JAVASCRIPT</a></li>
+            <h3>DEV. DATABASE</h3>
             <li><a href="PAGE/STUDY/SQL/course.html">SQL</a></li>
+            <h3>DEV. ANDROID</h3>
+            <li><a href="PAGE/STUDY/ANDROID/course.html">ANDROID STUDIO</a></li>
         </ul>
     </article>
 </body>
